MComix 0.94

    - Fixed MComix opening archives in sibling directories
      even when "Automatically open next archive" was disabled.

    - MComix automatically switching to next/previous directories can now
      be controlled with a new preference option.

    - Updated French translation. (by Frédéric Chateaux)

MComix 0.93
Release date: 27.08.2011

    - Removing a book from the library while its thumbnail wasn't loaded yet
      would result in a segmentation fault. This issue has been fixed.

    - Fixed sorting in the bookmark edit dialog not working as expected. The
      buttons "Sort ascending" and "Sort descending" have been removed, as
      they did the same as clicking on the "Name" header of the bookmarks
      table. Double-clicking a bookmark will open it.

    - Fixed a bug that made it impossible to show toolbar/menu controls in
      fullscreen mode if "Automatically hide all toolbars in fullscreen" was
      enabled.

    - Fixed exception related to calculation of dynamic background colors.
      (by Nephiel)

    - Library collection names did not accept non-ASCII characters. This has
      been fixed.

    - Added support for LHA/LZH archives, using either 'lha' or '7z' as
      extractors. Please not that the '7z' executable on Windows does not
      support printing Unicode characters at all, so extracting an archive with
      non-ASCII filenames will always fail.

    - By selecting a folder instead of a file in the library's "Add book"
      dialog, all archives within the selected directory will be added to the
      library recursively.

    - Doing the same in the normal "Open" dialog will open all files within the
      directory.

    - MComix will now ask for confirmation when creating a new bookmark in an
      archive that was already bookmarked before. This allows the user to
      either create a new bookmark, or replace the old one with the current
      page.
